# RustCC-Profiler

./: .gitignore  BUILD.md  BUILDING_ON_LINUX.md  BUILDING_ON_WINDOWS.md  CMakeLists.txt  COMPLETE_MVP.md  PROFILER_TRIGGER_VERIFICATION.md  PROJECT_STRUCTURE.md  README.md  Rust_Cpp_Manifesto.md  Tough C Menifesto.md  Working Track .md  quick-build.ps1  quick-build.sh
.github/skills/rcc-refactor/: SKILL.md
.github/workflows/: ci.yml
Docs/: INDEX.md  PUBLICATION_SUMMARY_2026-03-22.md  arxiv_draft_rustcc_cpp17.md  ci_cd_quickstart.md  end_to_end.md  integration_plan.md  keywords_and_profiles.md  llama_cpp_manual_review_report_2026-03-22.md  memory_demo_todo.md  memory_sidecar_guide.md  memory_vulnerability_demo.md  nccl_rcc_findings_2026-03-22.md  rcc_portable_quickstart.md  rust_abstractions.md  rust_c_cpp_spec.md  tough C .md  user_guide.md  user_workflow_and_research_note.md  vision.md
examples/: 01_smart_pointers_t.cc  02_raw_pointer_violations_t.cc  03_lifetime_safety_t.cc  04_lifetime_violations_t.cc  05_thread_safety_t.cc  06_thread_violations_t.cc  07_move_semantics.tcc  07_move_semantics_t.cc  08_move_violations.tcc  08_move_violations_t.cc  09_borrow_checker.tcc  09_borrow_checker_t.cc  10_borrow_violations.tcc  10_borrow_violations_t.cc  11_option_result_patterns.tcc  11_option_result_patterns_t.cc  12_safety_violations.tcc  12_safety_violations_t.cc  13_memory_hardbugs_t.cc  CMakeLists.txt
include/tcc/: ASTVisitor.h  BorrowRules.h  ConcurrencyRules.h  Core.h  Diagnostic.h  DiagnosticHelper.h  FileDetector.h  LifetimeRules.h  MoveSemanticRules.h  OwnershipRules.h  Rule.h  RuleEngine.h  SafetyPatternRules.h
scripts/: package-rcc-portable.ps1  rcc-check-changed.sh  rcc-check-dir.ps1  rcc-check-dir.sh  rcc-check-file.sh  rcc-ci-check.sh
src/: ASTVisitor.cpp  BorrowRules.cpp  CMakeLists.txt  ConcurrencyRules.cpp  Diagnostic.cpp  FileDetector.cpp  LifetimeRules.cpp  MoveSemanticRules.cpp  OwnershipRules.cpp  Rule.cpp  RuleEngine.cpp  SafetyPatternRules.cpp  main.cpp
tests/: CMakeLists.txt
tests/data/: test_borrow001.cpp  test_borrow001_clean.cpp  test_borrow002.cpp  test_borrow002_clean.cpp  test_borrow003.cpp  test_borrow003_clean.cpp  test_borrow004.cpp  test_borrow004_clean.cpp  test_iter001.cpp  test_iter001_clean.cpp  test_life005.cpp  test_life005_clean.cpp  test_own008.cpp  test_own008_clean.cpp
tests/data/fail/: memory_hardbugs.cpp  move_use_after_move.cpp  safety_violations.cpp
tests/data/pass/: move_semantics_safe.cpp  ownership_containers.cpp  ownership_smart_pointers.cpp  safety_option_result.cpp
